--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,6 @@
+Version 0.1.3:
+- Added support for x2go thin client environment
+
 Version 0.1.2:
 
 - x2goserver does not have status command on debian. Thanks to Carlos Sanchez for the patch!
