--- a/README.textile
+++ b/README.textile
@@ -21,7 +21,12 @@ value, you can override the x2go::params::ensure parameter using hiera.
     
 * To install a x2go thin client environment
 
-    @class { 'x2go::tce':   version => 'latest', export_2_network => '192.168.1.0/255.255.255.0'}@
+bq. class { 'x2go::tce':  
+      version => 'latest', 
+      x2go_chroot => '/opt/x2gothinclient/chroot',  
+      export_2_network => '192.168.1.0/255.255.255.0',
+    }
+      
     
    You will probably have to customize your installation: see the "x2go wiki":http://wiki.x2go.org/doku.php/wiki:advanced:tce:install
 
@@ -29,7 +34,7 @@ value, you can override the x2go::params::ensure parameter using hiera.
     
 h2. License
 
-Copyright 2011, niklaus.giger@member.fsf.org
+Copyright 2011-2013, niklaus.giger@member.fsf.org
 
 This program is free software; you can redistribute  it and/or modify it under the terms of the GNU General Public License version 3 as published by 
 the Free Software Foundation.
